FIDvsINC/calc_fid_6103.err
  File "fid_is.py", line 246
    m, s = calculate_activation_statistics(x, sess)
    ^
SyntaxError: invalid syntax
